# metaplay-fake-interview-supply-chain-incident

./: .gitignore  AGENTS.md  ARTIFACTS.md  CLAUDE.md  CODEX.md  GEMINI.md  INCIDENT_THREAT_SURFACE.md  IOCs.md  JUPYTER_SETUP.md  Makefile  NOHUP_RUNTIME_EVIDENCE.md  NOTEBOOKS.md  ORIGINAL_LINKEDIN_MESSAGE.md  PUBLISHING.md  README.md  _config.yml  flake.nix  index.md  pyproject.toml
.decapod/: config.toml
.github/workflows/: decapod-validate.yml
_layouts/: default.html
analysis/: README.md
artifacts/: README.md
assets/css/: style.css
docs/notebooks/: 00-python-lab-healthcheck.html  (+14 more)
fixtures/: README.md  fake-nohup-runtime-evidence.json  fake-package-json.json  fake-process-env.redacted.json  fake-stage2-response-summary.json  iocs.public.json  public-artifact-catalog.json  stage2-feature-summary.public.json
notebooks/: 00-analysis-map-and-safety-boundary.ipynb  00-python-lab-healthcheck.ipynb  01-deno-js-runtime-healthcheck.ipynb  01-npm-lifecycle-entrypoint-analysis.ipynb  02-node-import-chain-and-side-effects.ipynb  02-package-json-lifecycle-analysis.ipynb  03-first-stage-env-exfil-dataflow.ipynb  03-stage2-static-deobfuscation-notes.ipynb  04-ioc-extraction.ipynb  04-stage-two-static-feature-analysis.ipynb  05-beacon-and-network-path-analysis.ipynb  05-behavior-map.ipynb  06-ioc-and-artifact-derivation.ipynb  07-evidence-boundary-and-claim-classification.ipynb
screenshots/: index.md
scripts/: build-public-notebooks.py  check-public-safety.sh  render-notebooks.nu  render-notebooks.sh  sanitize-notebooks.py  write-notebook-index.py
tools/: README.md
(+5 files in other folders)
